[gd_scene load_steps=49 format=2]

[ext_resource path="res://Enemies/Walker.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Mutants/Mutant.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Mutants/Mutant_1_sheet-Sheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 250, 500, 125, 100 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 625, 200, 125, 100 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 750, 200, 125, 100 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 0, 300, 125, 100 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 100, 125, 100 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 125, 100, 125, 100 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 250, 100, 125, 100 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 375, 100, 125, 100 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 625, 300, 125, 100 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 750, 300, 125, 100 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 0, 400, 125, 100 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 125, 400, 125, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 500, 200, 125, 100 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 125, 300, 125, 100 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 250, 300, 125, 100 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 375, 300, 125, 100 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 500, 300, 125, 100 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 750, 400, 125, 100 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 0, 500, 125, 100 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 125, 500, 125, 100 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 250, 500, 125, 100 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 250, 400, 125, 100 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 375, 400, 125, 100 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 500, 400, 125, 100 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 625, 400, 125, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 375, 0, 125, 100 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 500, 0, 125, 100 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 625, 0, 125, 100 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 750, 0, 125, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 200, 125, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 125, 200, 125, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 250, 200, 125, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 375, 200, 125, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 500, 200, 125, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 500, 100, 125, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 625, 100, 125, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 750, 100, 125, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 200, 125, 100 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 125, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 125, 0, 125, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 250, 0, 125, 100 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "deadR",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "idleR",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "attackL",
"speed": 6.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "attackR",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "deadL",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "walkR",
"speed": 4.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": false,
"name": "dieR",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "hurtR",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "walkL",
"speed": 4.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "dieL",
"speed": 10.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "hurtL",
"speed": 6.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idleL",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 29.7871, 39.1447 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 60.6883, 39.8395 )

[sub_resource type="CapsuleShape2D" id=24]
radius = 19.2755
height = 53.9307

[node name="Mutant" instance=ExtResource( 1 )]
collision_mask = 9
script = ExtResource( 2 )
health = 20

[node name="Sprite" parent="." index="0"]
position = Vector2( -12, 0 )
frames = SubResource( 22 )
animation = "attackL"
frame = 3

[node name="AttackDetector" type="Area2D" parent="Sprite" index="0"]
position = Vector2( 12, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AttackDetector" index="0"]
position = Vector2( -48.7353, 0.794594 )
shape = SubResource( 45 )

[node name="PlayerDetector" parent="Sprite" index="1"]
scale = Vector2( -1, 1 )

[node name="CollisionShape2D" parent="Sprite/PlayerDetector" index="0"]
position = Vector2( 67.3044, 1.32059 )
shape = SubResource( 23 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 0 )
shape = SubResource( 24 )

[node name="FloorNormal" parent="." index="2"]
cast_to = Vector2( 0, 60 )

[node name="WalkTimer" type="Timer" parent="." index="3"]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Sprite/AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="body_entered" from="Sprite/PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="Sprite/PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
